# pydaug

./: .gitignore  README.md  pyproject.toml
daug_eros_montin/: daug.py
pydaug_eros_montin/: pydaug.py
tests/: test_Pathable.py  test_pydaug.py
